# MBX

./: CMakeLists.txt  compile.sh
examples/sample_input_files/: disprep.json
install/include/bblock/: sys_tools.h  system.h
plugins/lammps/USER-MBX/: fix_mbx.cpp  fix_mbx.h  pair_mbx.cpp  pair_mbx.cpp~  pair_mbx.h
src/: CMakeLists.txt
src/bblock/: #sys_tools.cpp#  CMakeLists.txt  subgraphs.cpp  subgraphs.cpp~  subgraphs.h  subgraphs.h~  sys_tools.cpp  sys_tools.h  sys_tools2.cpp  sys_tools_old.cpp  system.cpp  system.h
src/potential/: CMakeLists.txt
src/potential/1b/: energy1b.cpp  mbnrg_1b_A1B3_deg5_v1.cpp  x1b_A1B4_deg5_exp0_v1x.cpp
src/potential/2b/: CMakeLists.txt  OW_OW.cpp  OW_OW.cpp~  OW_OW.h  OW_OW.h~  energy2b.cpp  energy2b.h  mbnrg_2b_A1B3_A1B3_deg4_v1.cpp  x2b_A1B2_A1B2_v1x.cpp  (+2 more)
src/potential/4b/: CMakeLists.txt  OW_OW_OW_OW.cpp  OW_OW_OW_OW.cpp_old  OW_OW_OW_OW.cpp~  OW_OW_OW_OW.h  energy4b.cpp  energy4b.cpp~  energy4b.h
src/tests/: single_point.cpp
src/tools/: CMakeLists.txt
test/: #input.nrg#  298_25_2.nrg  298_25_2.xyz  298_25_3.nrg  298_25_cp.nrg  OW.json  OW.json~  OW.params  OW_OW.params  OW_OW_OW.params  OW_OW_OW.params_cp  OW_OW_OW_OW.params  callgrind.out.12462  callgrind.out.16100  callgrind.out.19048  callgrind.out.21174  callgrind.out.21466  callgrind.out.23703  callgrind.out.25217  callgrind.out.28307  callgrind.out.29421  callgrind.out.30660  callgrind.out.31810  callgrind.out.3452  callgrind.out.3594  callgrind.out.5221  callgrind.out.610  callgrind.out.7695  input.nrg  input.nrg~  input_out.nrg  mbx.json  mbx2.json  mbx3.json
(+38 files in other folders)
