set(FOURB_SOURCES energy4b.cpp 
# BEGIN SECTION CMAKELISTS
                 OW_OW_OW_OW.cpp
        
# END SECTION CMAKELISTS
)

#SET_SOURCE_FILES_PROPERTIES(poly-2b-v6x.cpp PROPERTIES COMPILE_FLAGS -O0)

add_library(4b OBJECT ${FOURB_SOURCES})
target_include_directories(4b PRIVATE ${CMAKE_SOURCE_DIR}) 
set_property(TARGET 4b PROPERTY POSITION_INDEPENDENT_CODE TRUE)
